--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -31,7 +31,7 @@
       <div class="col-12 col-sm-4 text-center py-2 order-sm-2">
         <small class="text-white">© {{ 'now' | date: "%Y" }} {{ site.author }} All Rights Reserved</small>
         {% if site.privacy %}<small class="ml-1"><a href="{{ site.privacy }}" target="_blank">Privacy Policy</a></small>{% endif %}
-        <p class="mt-2">Evolve.</p>	
+        <p class="mt-2">Bluefin is built with <a href=http://universal-blue.org">Universal Blue</a>, a community toolkit designed to reboot the Linux desktop. Built for the love of the game. Welcome to indie Cloud Native.</p>	
       </div>
     </div>
   </div>
