--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -14,6 +14,9 @@
                   <a class="md-header-nav__button md-logo" href="{{ site.url }}" title="{{ site.title }}">
                     {% if site.logo %}<img height="{{ site.logo_pixels }}" src="{{ site.baseurl }}/{{ site.logo }}" width="{{ site.logo_pixels }}">{% else %}<i class="md-icon" style="margin-top:5px"></i>{% endif %}</a>
                 </div>
+                <div class="md-flex__cell md-flex__cell--shrink">
+                    <label class="md-icon md-icon--menu md-header-nav__button" for=__drawer></label>
+                </div>
                 <div class="md-flex__cell md-flex__cell--stretch">
                     <div class="md-flex__ellipsis md-header-nav__title" data-md-component=title> 
                         <span class=md-header-nav__topic>{{ site.title }}</span>
