--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -30,7 +30,7 @@
       </div>
       <div class="col-12 col-sm-4 text-center py-2 order-sm-2">
         <small class="text-white">© {{ 'now' | date: "%Y" }} {{ site.author }} All Rights Reserved</small>
-        <p class="text-white">Bluefin is built with <a href=http://universal-blue.org">Universal Blue</a>. Evolve.</p>	
+        <p class="text-white">Bluefin is built with <a href=https://universal-blue.org">Universal Blue</a>. Evolve.</p>	
       </div>
     </div>
   </div>
