--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,12 @@
   <div class="container-fluid mx-sm-5">
     <div class="row">
       <div class="col-6 col-sm-4 text-xs-center order-sm-2">
-        <ul class="list-inline mb-0">  
+        <ul class="list-inline mb-0">
+          <li class="list-inline-item mx-2 h3" data-toggle="tooltip" data-placement="top" title="" aria-label="GitHub" data-original-title="GitHub">
+            <a class="text-white" target="_blank" href="{{ site.repo }}">
+              <i class="fab fa-github"></i>
+            </a>
+          </li>
           {% if site.twitter %}
             <li class="list-inline-item mx-2 h3" data-toggle="tooltip" data-placement="top" title="" aria-label="Twitter" data-original-title="Twitter">
               <a class="text-white" target="_blank" href="https://twitter.com/{{ site.twitter }}">
@@ -20,17 +25,69 @@
         </ul>
       </div>
       <div class="col-6 col-sm-4 text-right text-xs-center order-sm-3">
-        <ul class="list-inline mb-0">  
-          <li class="list-inline-item mx-2 h3" data-toggle="tooltip" data-placement="top" title="" aria-label="GitHub" data-original-title="GitHub">
-            <a class="text-white" target="_blank" href="{{ site.repo }}">
-              <i class="fab fa-github"></i>
-            </a>
+        <ul class="list-inline mb-0">
+          <li class="list-inline-item mr-0" data-toggle="tooltip" data-placement="top" title="" aria-label="Toggle Light Theme" data-original-title="Toggle Light Theme">
+
+            <button
+              type="button"
+              class="btn td-border-none p-0"
+              aria-label="Light Theme"
+              data-theme-toggle="light"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class=""
+              >
+                <circle cx="12" cy="12" r="4"></circle>
+                <path d="M12 2v2"></path>
+                <path d="M12 20v2"></path>
+                <path d="m4.93 4.93 1.41 1.41"></path>
+                <path d="m17.66 17.66 1.41 1.41"></path>
+                <path d="M2 12h2"></path>
+                <path d="M20 12h2"></path>
+                <path d="m6.34 17.66-1.41 1.41"></path>
+                <path d="m19.07 4.93-1.41 1.41"></path>
+              </svg>
+            </button>
+          </li>
+          <li class="list-inline-item" data-toggle="tooltip" data-placement="top" title="" aria-label="Toggle Dark Theme" data-original-title="Toggle Dark Theme">
+
+            <button
+              type="button"
+              class="btn td-border-none p-0"
+              aria-label="Dark Theme"
+              data-theme-toggle="dark"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="24"
+                height="24"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="currentColor"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class=""
+              >
+                <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"></path>
+              </svg>
+            </button>
+
           </li>
         </ul>
       </div>
       <div class="col-12 col-sm-4 text-center py-2 order-sm-2">
         <small class="text-white">© {{ 'now' | date: "%Y" }} {{ site.author }} All Rights Reserved</small>
-        <p class="text-white">Bluefin is built with <a href=https://universal-blue.org">Universal Blue</a>. Evolve.</p>	
+        <p class="text-white">Bluefin is built with <a href=https://universal-blue.org">Universal Blue</a>. Evolve.</p>
       </div>
     </div>
   </div>
