--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="no-js">
+<html lang="en" class="no-js dark">
   <!-- Copyright 2019-2021 Vanessa Sochat-->
   {% include head.html %}
   {% include google-analytics.html %}
