chore(icons): reuse existing fontawesome sun/moon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -26,62 +26,15 @@
       </div>
       <div class="col-6 col-sm-4 text-right text-xs-center order-sm-3">
         <ul class="list-inline mb-0">
-          <li class="list-inline-item mr-0" data-toggle="tooltip" data-placement="top" title="" aria-label="Toggle Light Theme" data-original-title="Toggle Light Theme">
-
-            <button
-              type="button"
-              class="btn td-border-none p-0"
-              aria-label="Light Theme"
-              data-theme-toggle="light"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                class=""
-              >
-                <circle cx="12" cy="12" r="4"></circle>
-                <path d="M12 2v2"></path>
-                <path d="M12 20v2"></path>
-                <path d="m4.93 4.93 1.41 1.41"></path>
-                <path d="m17.66 17.66 1.41 1.41"></path>
-                <path d="M2 12h2"></path>
-                <path d="M20 12h2"></path>
-                <path d="m6.34 17.66-1.41 1.41"></path>
-                <path d="m19.07 4.93-1.41 1.41"></path>
-              </svg>
-            </button>
+          <li class="list-inline-item h3" data-toggle="tooltip" data-placement="top" title="" aria-label="Toggle Light Theme" data-original-title="Toggle Light Theme">
+            <a class="text-white" href="#" data-theme-toggle="light">
+              <i class="fas fa-sun"></i>
+            </a>
           </li>
-          <li class="list-inline-item" data-toggle="tooltip" data-placement="top" title="" aria-label="Toggle Dark Theme" data-original-title="Toggle Dark Theme">
-
-            <button
-              type="button"
-              class="btn td-border-none p-0"
-              aria-label="Dark Theme"
-              data-theme-toggle="dark"
-            >
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                class=""
-              >
-                <path d="M12 3a6 6 0 0 0 9 9 9 9 0 1 1-9-9Z"></path>
-              </svg>
-            </button>
-
+          <li class="list-inline-item h3" data-toggle="tooltip" data-placement="top" title="" aria-label="Toggle Dark Theme" data-original-title="Toggle Dark Theme">
+            <a class="text-white" href="#" data-theme-toggle="dark">
+              <i class="fas fa-moon"></i>
+            </a>
           </li>
         </ul>
       </div>
