--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,9 @@
 ---
 layout: default
 ---
-{{ content }}
-{% include toc.html %}
-{% include permalinks.html %}
-{% include tags.html %}
+
+{{ content }} {% include toc.html %} {% include permalinks.html %}
+{%
+  include
+  tags.html
+%}
