chore: Increase contrast & text legibility in dark mode

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -18619,7 +18619,7 @@ footer {
 /* Dark mode overrides */
 :root {
     --dark-300: #cbd5e1;
-    --dark-500: #64748b;
+    --dark-500: #99a5b6;
     --dark-700: #334155;
     --dark-800: #1e293b;
     --dark-900: #0f172a;
