--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -5,28 +5,27 @@
  */
 
 /* FIXME: make these blue! (more like "slate") */
-
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #4a69bd; /* Base blue-gray */
+  --ifm-color-primary-dark: #3f5aa4; /* Darker */
+  --ifm-color-primary-darker: #364d8d; /* Even darker */
+  --ifm-color-primary-darkest: #2c4075; /* Darkest */
+  --ifm-color-primary-light: #5c7bd1; /* Lighter */
+  --ifm-color-primary-lighter: #708ee3; /* Even lighter */
+  --ifm-color-primary-lightest: #89a3f0; /* Lightest */
   --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --docusaurus-highlighted-code-line-bg: rgba(74, 105, 189, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #5c7bd1; /* Base blue-gray for dark mode */
+  --ifm-color-primary-dark: #4a69bd; /* Darker */
+  --ifm-color-primary-darker: #3f5aa4; /* Even darker */
+  --ifm-color-primary-darkest: #364d8d; /* Darkest */
+  --ifm-color-primary-light: #708ee3; /* Lighter */
+  --ifm-color-primary-lighter: #89a3f0; /* Even lighter */
+  --ifm-color-primary-lightest: #a2b5fa; /* Lightest */
+  --docusaurus-highlighted-code-line-bg: rgba(74, 105, 189, 0.3);
 }
