--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -19,7 +19,7 @@
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
+[data-theme="dark"] {
   --ifm-color-primary: #5c7bd1; /* Base blue-gray for dark mode */
   --ifm-color-primary-dark: #4a69bd; /* Darker */
   --ifm-color-primary-darker: #3f5aa4; /* Even darker */
