--- a/src/components/MusicPlaylist.module.css
+++ b/src/components/MusicPlaylist.module.css
@@ -23,9 +23,9 @@
 .thumbnailWrapper {
   position: relative;
   width: 100%;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
   overflow: hidden;
   background-color: var(--ifm-color-emphasis-200);
-  aspect-ratio: 16 / 9;
 }
 
 .thumbnail {
@@ -34,7 +34,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
   transition: transform 0.2s ease;
 }
 
