--- a/src/components/MusicPlaylist.module.css
+++ b/src/components/MusicPlaylist.module.css
@@ -5,9 +5,6 @@
   overflow: hidden;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   transition: all 0.2s ease;
-  aspect-ratio: 16 / 9;
-  display: flex;
-  flex-direction: column;
 }
 
 .playlistBox:hover {
@@ -20,15 +17,12 @@
   display: block;
   text-decoration: none;
   color: inherit;
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
 }
 
 .thumbnailWrapper {
   position: relative;
   width: 100%;
-  flex-grow: 1;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio */
   overflow: hidden;
   background-color: var(--ifm-color-emphasis-200);
 }
